fixed spacing in user panel

--- a/src/pages/UserPanel/UserPanel.scss
+++ b/src/pages/UserPanel/UserPanel.scss
@@ -43,7 +43,7 @@
     width: 100%;
     border-right: none;
     border-bottom: 1px solid var(--border-color);
-    margin: 120px auto 0;
+    margin: 88px auto 0;
   }
 }
 
